# numsim-materials

./: .gitignore  CMakeLists.txt  LICENSE  MERGE_SUMMARY.md  README.md  TODO.md  project-meta-info.in
.github/workflows/: ci.yml
examples/: CMakeLists.txt
examples/autocatalytic_reaction/: CMakeLists.txt  main.cpp
include/numsim-materials/: default_materials.h
include/numsim-materials/core/: history_property.h  input_types.h  material_base.h  material_context.h  material_interface.h  material_property_info.h  material_ref.h  object_store.h  property.h  property_engine.h  property_registry.h  property_registry_interface.h  property_traits.h  traits.h
include/numsim-materials/io/: json_material_factory.h  json_parameter_converter.h
include/numsim-materials/materials/: autocatalytic_reaction.h  exponential_damage_law.h  exponential_isotropic_hardening.h  isotropic_damage.h  linear_damage_law.h  linear_elasticity.h  linear_isotropic_hardening.h  scalar_complement_weight.h  scalar_identity_weight.h  scalar_stepper.h  small_strain_plasticity.h  strain_energy_state_function.h  strain_threshold_yield.h  tensor_component_stepper.h  vector_strain_state_function.h  von_mises_state_function.h  weighted_sum.h  yield_functions.h
include/numsim-materials/postprocessing/: numerical_diff_checker.h  plot_backend.h  property_console_logger.h  property_plot.h  qcustomplot_backend.h  tangent_checker.h
include/numsim-materials/solvers/: backward_euler.h
tests/: CMakeLists.txt  test_damage.cpp  test_j2_plasticity.cpp  test_materials.cpp  test_property_graph.cpp
